--- a/HostelManagement.html
+++ b/HostelManagement.html
@@ -21,6 +21,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Comforter+Brush&display=swap" rel="stylesheet">
 
     <style>
+
+      .cap{
+        margin: 1% 30% -5% 30%;
+        text-align: center;
+        
+        border-radius: 5px;
+      }
       .img-area{
         background-image: url("Images/colors.jpg");
         -webkit-background-size: cover;
